--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/pg": "^8.11.10",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "prettier": "3.3.3",
     "typescript": "^5.6.3"
   }
 }
